# compliance-project

./: README.md  compliance_output.json  compliance_rules.json  confidential_model.pkl  doc  output.json  pyproject.toml
src/compliance_project/: analyze.py  confidential_data.py  extract_stakeholder_info.py  main.py  preprocess.py  rules.py  train_confidential_model.py
